Bug 406676 - "GTK Menu Separator is not painted natively" [p=ispence@gmail.com (Ian Spence) r+sr=roc a1.9=beltzner]