widget/src/gtk2/gtkdrawing.h
@@ -182,6 +182,7 @@ typedef enum {
   MOZ_GTK_MENUITEM,
   MOZ_GTK_CHECKMENUITEM,
   MOZ_GTK_RADIOMENUITEM,
+  MOZ_GTK_MENUSEPARATOR,
   /* Paints the background of a window, dialog or page. */
   MOZ_GTK_WINDOW
 } GtkThemeWidgetType;
@@ -321,6 +322,14 @@ gint moz_gtk_get_toolbar_separator_width(gint* size);
  * returns:    MOZ_GTK_SUCCESS if there was no error, an error code otherwise
  */
 gint moz_gtk_get_expander_size(gint* size);
+
+/**
+ * Get the desired height of a menu separator
+ * size:    [OUT] the desired height
+ *
+ * returns: MOZ_GTK_SUCCESS if there was no error, an error code otherwise
+ */
+gint moz_gtk_get_menu_separator_height(gint* size);
 
 /**
  * Retrieve an actual GTK scrollbar widget for style analysis. It will not
